--- a/my-app/src/index.css
+++ b/my-app/src/index.css
@@ -1,13 +1,18 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+.content {
+    min-height: calc(100vh - 70px - 64px);
+    background-color: antiquewhite;
+    /* height: 500px; */
 }
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.movies{
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(250px,1fr));
+    gap: 1em;
+}
+.search-btn{
+    position: absolute;
+    top: 0;
+    right: 0;
+}
+label:not(:last-child) {
+    margin-right: 1rem;
 }
